[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Scott Schroeder <scottschroeder@sent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
anyhow = "1.0.32"

petgraph = "0.5.1"
fixedbitset = "0.2.0"
itertools = "0.8.2"
num = "0.2"
regex = "1"
lazy_static = "1"

# logging
slog = {version = "2.5.2", features=["max_level_trace"] }
slog-async = "2.3.0"
slog-term = "2.4.2"
slog-scope = "4.3.0"
[profile.test]
opt-level = 3

[profile.release]
debug = true